--- a/core/exceptions/src/main/res/values/strings.xml
+++ b/core/exceptions/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="no_internet_connection">No Internet connection</string>
-    <string name="no_data_found">No data found</string>
+    <string name="service_unavailable">Service unavailable</string>
     <string name="check_internet_exception">Check your Internet connection</string>
 </resources>
